# acer-pal

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  Endpoint.py  README.md  docker-compose.yml  gunicorn.conf.py  main.py  pyproject.toml  requirements-test.txt  run_tests.py
nginx/: nginx.conf
templates/: 404.html  base.html  downloads.html  episodes.html  file_manager.html  index.html  login.html  qualities.html  results.html  settings.html
tests/: __init__.py  test_auth_config.py  test_downloads.py  test_filename_generation.py  test_flask_app.py
